# akm

./: .env.template  .gitignore  Cargo.toml  build-json-glue.sh  flake.nix
.sqlx/: query-02098b5adba3c5b50596e47988d3c63f75b7abf3625710d2601d59817034bd69.json  query-071dcbf71efe238e3878e6e827ef0fd605cc514eca3ce51eada8b63de1c1711a.json  query-09f93724bc0bbc3f3c2fcf3b50264304bde472487f1d6bf3faaf4cc7baa455d3.json  query-165f79d89e91efd4a381e9d78bc09564ecc105cf54b08b7e469419b74ca27288.json  query-1ed7e0e56c7fe90d37d2a5e0e258c9aaf23b32aed3eace74c2f79538274a0fe2.json  query-27c1031e7195086d926a62a476761a3f9bf9d933e5b5621a8dd637fba249b8e3.json  query-2ebe44b27208133e61c147a4bf4e699978d0bb1be4fc5c41b1da974e135e38a6.json  query-34be102924564cb35649299e64a177908a227ebd0ed38c3cb52ba0990d346f35.json  query-37c3091e1ef7ecc5e72318b7fa9e70bfdb056c606f08387a3940a8f9ee383722.json  query-38f52b5bdac21048c62facef907c1f3dcf96d9891feb13d2bd191d60b2b3a2f9.json  query-412c4d63142f5e3b5bfb5898e2e1ced0a122a7dd16d7ba4e4f640db436024477.json  query-6120e216191ccbdb125b935fa2838c2b3d3b4c215f636075fa40afc86f0e5a5c.json  query-63fdfa08e0a7f30e3020240bdeea45ef0da3a85ba6ffbe24e809fa4022998c5a.json  query-6684ee586e91e37009d5d5175c1585b3c8c724ba9b74e504f5e393b3b71fd91c.json  query-7f75d9e18ba5328b291e323354f58f395aa320833a1af2b25f5bf7b6e8fd0179.json  query-8d4b932a51c2ef6deb1c1811ca8626da70e90e0fe74d3c420152b609da20c0b8.json  query-9a2a52d8adcbbd7dbee9c1cb13bc9f9a8ff70423dfec45bc525db4dd6b41aeaf.json  query-b1b88bcbbe8695e7c8e24cfa107db284909f1ba41632cac9054f1084bd010cbd.json  query-b463e3f77dd663c1607b4e28ad04fca6e73c04a167ab327f04961460ee1700d9.json  query-b7115b906d9303b3c710217cdaaae1b9121003b857c317c4e1e3f392fbb04ee7.json  query-b98e780891cf377ed0d9a5a6be90f85af00686f77981a80846ae62935e2d09f8.json  query-beafc6fc7757fcc4c2eb15a1b190d818a25fe5ffd351cf648b0b9ace748a42b5.json  query-e37ed617f1090915239f16d26e28fd06101b31d9fac0495f8b47ec4b353e0239.json  query-eae421d58b85e74de53ce9e36ccb857e16b025583ac72b3ce74c129c8a5a3d40.json  query-ebe33f19f9bea13cb5da7f9481c4beba8ef017044446d0aa753be16aa8d746e6.json  query-ebefd7035d823c5a28d49ed88ee2006a63a5dbbc4ccb934737fcb6c606c70fc9.json
json-glue/: Cargo.toml
json-glue/src/: lib.rs
src/: auth.rs  config.rs  database.rs  main.rs  state.rs
src/api/: client.rs  key.rs  mod.rs  utils.rs
src/database/: clientkeys.rs  clients.rs  init.sql  keys.rs  users.rs
src/front/: client_all.rs  client_key.rs  index.rs  key.rs  mod.rs
src/routes/: api.rs  mod.rs
src/routes/api/: client.rs
static/: manifest.json
static/css/: common.css
static/js/: common.js
templates/: client_key.html  clients.html  index.html  keys.html  template.html
