[package]
name = "apiserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
minijinja = "2.11.0"
openidconnect = "4.0.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = { version = "0.11.0-rc.0", features = ["zeroize"] }
sqlx = { version = "0.8.6", features = ["derive", "sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
url = "2.5.4"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
